syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.abellee.cniface.grpc.detect";
option java_outer_classname = "DetectProto";
option objc_class_prefix = "CNIFACE";

package cniface;


service DetectService {
    rpc detect (DetectRequest) returns ( DetectResponse) {}
}

message DetectRequest {
    string faceImageBase64 = 1;
    float score = 2;
}

message DetectResult {
    float score = 1;
    float x = 2;
    float y = 3;
    float w = 4;
    float h = 5;
    repeated float kps = 6;
}

message DetectResponse {
    int64 code = 1;
    string message = 2;
    repeated DetectResult results = 3;
}

